# url-shortener-tutorial

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml  run.sh  shortener.db
shortener_app/: config.py  crud.py  database.py  keygen.py  main.py  models.py  schemas.py
src/url-shortener/: __init__.py
